# aoc24

./: .gitignore  README.md  cabal.project
01/: part1.hs  part2.hs
01/part1/: Main.hs  aoc23-day01-part1.cabal
01/part2/: Main.hs  aoc23-day01-part2.cabal
02/part1/: Main.hs  aoc23-day02-part1.cabal
